--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "set": "npm install --save-dev --save",
     "fix": "cp fix/app.js node_modules/lunawallet/src && cp fix/index.js node_modules/bitcore-explorers/node_modules/bitcore-lib",
     "migrate": "npm run fix && echo \"db.dropDatabase()\" | mongo swap && node src/services/migrate.js",
     "start": "babel-node src/app.js"
