--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.1",
     "cookie-parser": "^1.4.4",
+    "delay": "^4.3.0",
     "dotenv": "^8.2.0",
     "ejs": "^2.5.7",
     "express": "^4.17.1",
