--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "set": "npm install --save-dev --save",
     "fix": "cp fix/app.js node_modules/lunawallet/src && cp fix/index.js node_modules/bitcore-explorers/node_modules/bitcore-lib",
     "migrate": "npm run fix && echo \"db.dropDatabase()\" | mongo swap && node src/services/migrate.js",
-    "start": "npm run fix && node src/services/reload.js && babel-node src/app.js"
+    "start": "npm run fix && babel-node src/app.js"
   },
   "keywords": [],
   "author": "",
