--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
     "fs": "0.0.1-security",
+    "geoip-lite": "^1.4.0",
     "https": "^1.0.0",
     "later": "^1.2.0",
     "lunawallet": "^1.8.0",
